Alternative jetty placement due to vagrant shared folders and fedora4. Blacklight now uses the "correct" solr